<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">soulan_jo</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <!--TODO ENTER YOUR APP ID BELOW-->
    <string name="facebook_app_id"/>
    <!--TODO ENTER YOUR APP ID BELOW (eg: fb0123456789)-->
    <string name="fb_login_protocol_scheme">fb</string>
    <!--TODO ENTER YOUR Client Token BELOW-->
    <string name="facebook_client_token"/>
    <string name="lbl_avari_kudhra">Avari Kudhra</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_albert_o_connor">Albert O\u2019connor</string>
    <string name="lbl_phone_no">Phone No.</string>
    <string name="lbl_angeline">Angeline</string>
    <string name="msg_arman_has_commented">Arman has commented on your story
 \u201chey there\u201d to your timeline</string>
    <string name="msg_turn_on_notifications2">"turn on notifications for news updates about socio so you don't miss it"</string>
    <string name="lbl_rose23">\@rose23</string>
    <string name="msg_with_billions_of">With billions of people in the world we make it easy for you to get to know many new people for you who are looking for new friends partner or connections</string>
    <string name="lbl_live">LIVE</string>
    <string name="lbl_phone">Phone</string>
    <string name="lbl_or_login_with">Or login with</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_date_of_birth">Date of Birth</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_steven_ford">Steven Ford</string>
    <string name="msg_19_00_forg_stadium">19 : 00 | Forg Stadium</string>
    <string name="lbl_melvin_klein">Melvin Klein</string>
    <string name="msg_introduce_i_am_a">Introduce I am a photographer who travels around the world everyday, these are some of my works as a photographer.</string>
    <string name="lbl_so_beautiful">So Beautiful</string>
    <string name="lbl_6500">6500</string>
    <string name="lbl_notifications">Notifications</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_nabila_remaar">Nabila Remaar</string>
    <string name="msg_by_clicking_register">By clicking Register, you agree to our Data Policy and Cookie Policy. You will receive an SMS Notification from Facebook and can decline it at any time.</string>
    <string name="lbl_richard_alves">Richard Alves</string>
    <string name="lbl_clear_all">Clear All</string>
    <string name="msg_forgot_password">Forgot Password?</string>
    <string name="lbl_bali">#Bali</string>
    <string name="lbl_social">Social</string>
    <string name="msg_19_35_latuna">19 : 35 | Latuna Beach</string>
    <string name="msg_your_e_friends_on">Your\u2019e friends on twitter</string>
    <string name="lbl_45_minutes_ago">45 minutes ago</string>
    <string name="lbl_35_minutes_ago">35 minutes ago</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_email_id">Email Id</string>
    <string name="lbl_forest">#forest</string>
    <string name="lbl_recently">Recently</string>
    <string name="msg_welcome_to_social">Welcome to Social</string>
    <string name="lbl_windy_wandah">Windy Wandah</string>
    <string name="lbl_latest">Latest</string>
    <string name="lbl_40_min_ago">40 min ago</string>
    <string name="msg_this_is_a_very_rare">This is a very rare photo taken of me, namely animals that have their own business.</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_2_hours_ago">2 hours ago</string>
    <string name="lbl_huge">#huge</string>
    <string name="msg_introduce_my_name">Introduce my name is lewandhosky i am a bodybuilder i have been for 10 years i am a trainer and also the owner of the gym in my place i have more than 50 students and from one of them have won the national championship of bodybuilder.</string>
    <string name="lbl_friends">Friends</string>
    <string name="lbl_agness_monica">Agness Monica</string>
    <string name="lbl_post">Post</string>
    <string name="msg_nancy_liked_your">Nancy liked your photos</string>
    <string name="lbl_800">800</string>
    <string name="msg_me_and_my_friends">Me and my friends ran to the beauty of ocean paradise</string>
    <string name="lbl_events">Events</string>
    <string name="lbl_followers">Followers</string>
    <string name="lbl_rabbit">#rabbit</string>
    <string name="msg_most_people_never">Most people never appreciate what he does but instead they see the point of his fault for their own pleasure. </string>
    <string name="msg_haliford_luxury_hotel">Haliford Luxury
Hotel</string>
    <string name="lbl_password">Password</string>
    <string name="msg_please_enter_your2">Please enter your password email address. 
You will receive a link creative a new password 
via email.</string>
    <string name="lbl_35_16">35:16</string>
    <string name="msg_please_enter_your">Please enter your email address and password. </string>
    <string name="lbl_discover">Discover</string>
    <string name="msg_create_a_new_account">Create a New Account</string>
    <string name="lbl_beach">#Beach</string>
    <string name="msg_live_we_the_fest">LIVE - We The Fest</string>
    <string name="lbl_stories">Stories</string>
    <string name="lbl_erlikhe_sweet">Erlikhe Sweet
</string>
    <string name="msg_this_is_the_moment">This is the moment where i take a photo of a couple hugging in a beautiful rice field.</string>
    <string name="lbl_xyz_gmail_com">xyz@gmail.com</string>
    <string name="lbl_photos">Photos</string>
    <string name="lbl_invite_friends">Invite Friends</string>
    <string name="lbl_trending">Trending</string>
    <string name="msg_it_s_fast_and_easy">It\u2019s fast and easy</string>
    <string name="lbl_richard_mill">Richard Mill</string>
    <string name="lbl_nature">#nature</string>
    <string name="lbl_daily_new">Daily New</string>
    <string name="msg_hello_gerry_i_m">"Hello Gerry i'm very good, anyway are you interested in some of my pics?"</string>
    <string name="msg_21_00_latuna">21 : 00 | Latuna Beach</string>
    <string name="msg_hey_bro_where_are">Hey bro, where are you?</string>
    <string name="lbl_fotography">#fotography</string>
    <string name="lbl_2200">2200</string>
    <string name="lbl_4_hours_ago">4  hours ago</string>
    <string name="lbl_about_me">About me</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_4_6">4 / 6</string>
    <string name="lbl_log_in">Log In</string>
    <string name="lbl_jordan">Jordan</string>
    <string name="lbl_follow">Follow</string>
    <string name="lbl_rosalia">Rosalia</string>
    <string name="lbl_roy">Roy</string>
    <string name="lbl_delivered">Delivered</string>
    <string name="msg_halford_hotel_is">halford hotel is a luxury hotel that has 5 stars, this hotel is the most comfortable hotel in this area, very complete facilities make the halford hotel famous in the area, affordable prices can make tourists feel happy</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_comments">Comments</string>
    <string name="lbl_kevin_allsrub">Kevin Allsrub</string>
    <string name="msg_turn_on_notifications">Turn on Notifications</string>
    <string name="lbl_ocean">#Ocean</string>
    <string name="lbl_sarah_owen">Sarah Owen</string>
    <string name="lbl_streams">Streams</string>
    <string name="msg_find_new_friend_connection">Find new friend
connection or partner</string>
    <string name="lbl_recommeded">Recommeded</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_3400">3400</string>
    <string name="lbl">+</string>
    <string name="lbl_write_a_comment">Write a comment</string>
    <string name="lbl_new_post">New Post</string>
    <string name="lbl_done">Done</string>
    <string name="lbl_rick_onad">Rick Onad</string>
    <string name="lbl_lucas_anna">Lucas Anna </string>
    <string name="lbl_1_hour_ago">1 hour ago</string>
    <string name="lbl_email">Email</string>
    <string name="msg_dong_khuwan_so_beautiful">Dong Khuwan
So Beautiful</string>
    <string name="lbl_date_of_birth2">Date of birth</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_animal">#animal</string>
    <string name="msg_kevin_has_followed">Kevin has followed you</string>
    <string name="lbl_dreams">#dreams</string>
    <string name="lbl_merry_new_year">Merry New Year</string>
    <string name="msg_12_3456_789_000">+12 3456 789 000</string>
    <string name="lbl_holiday">#Holiday</string>
    <string name="lbl_rizal_reynaldhi">Rizal Reynaldhi</string>
    <string name="lbl_21_08_1992">21/08/1992</string>
    <string name="msg_erlikhe_sweet_can">Erlikhe Sweet
Can i join with you?</string>
    <string name="lbl_unfollow">Unfollow</string>
    <string name="lbl_messages">Messages</string>
    <string name="msg_blue_loyal_party">Blue Loyal Party</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="lbl_following">Following</string>
    <string name="msg_vacation_to_bali">Vacation to Bali is my biggest dream because I want to enjoy the beauty of the beach called Kute, hopefully my dream will come true</string>
    <string name="lbl_reply">Reply</string>
    <string name="lbl_75">75</string>
    <string name="lbl_dong_khuwan">Dong Khuwan
</string>
    <string name="lbl_10_00_am">10:00 AM</string>
    <string name="msg_connect_to_your">Connect to Your Friends</string>
    <string name="lbl_chrystin">Chrystin</string>
    <string name="msg_hi_larry_how_are">Hi! larry how are you today?</string>
    <string name="lbl_vrindha">Vrindha</string>
    <string name="lbl_garry_willer">Garry Willer</string>
    <string name="lbl_wow_awesome">Wow, Awesome !</string>
    <string name="msg_can_i_join_with">Can i join with you?</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
</resources>
